binarbox/src/front/src/styles.scss
/* theme styles */
@import 'theme/css/bootstrap/bootstrap.min';
@import 'theme/css/others/animate.scss';
@import 'theme/css/others/magnific-popup.scss';
@import 'theme/css/others/pe-icon-7-stroke.scss';
@import 'theme/css/responsive/responsive.scss';

/* Base CSS -mine css*/
* {
    box-sizing: border-box;
}

:root {
    --bridge-main-color: #FF9900;
}

html, body {
    height: 100%;
}

.wrp {
    /* width: 100%; */
    height: 100% !important;
}

.dashboard-content * {
    color: #000;
}

.elliptic-text {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

/* You can add global styles to this file, and also import other style files */


::-webkit-scrollbar {
    width: 25px;
    height: 0;
}

.page main::-webkit-scrollbar-thumb {
    height: 1em;
    border: 0.5em solid rgba(0, 0, 0, 0);
    background-clip: padding-box;
    -webkit-border-radius: 1em;
    background-color: rgba(145, 145, 145, .66);
    -webkit-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.025);
}

.page main:hover::-webkit-scrollbar-thumb {
    background-color: rgba(145, 145, 145, .84);
}

::-webkit-scrollbar-button {
    width: 0;
    height: 0;
    display: none;
}

::-webkit-scrollbar-corner {
    background-color: transparent;
}



.h-100 {
    height: 100%;
}

.w-100 {
    height: 100%;
}

.flex {
    display: flex;

    &--space-between {
        justify-content: space-between;
    }

    &--center {
        align-items: safe center;
    }

    &--horizontal {
        flex-direction: column;
    }

    &--horizontal-center {
        flex-direction: column;
        justify-content: safe center;
    }

    &--vertical-center {
        flex-direction: column;
        align-items: safe center;
        justify-content: safe center;
    }

    &--center-center {
        align-items: safe center;
        justify-content: safe center;
    }

    &--space-around {
        justify-content: space-around;
    }

    &--space-between {
        justify-content: space-between;
    }
}

.shadow-box {
    border: 1px solid #0000001f;
    border-radius: 20px;
    background-image: linear-gradient(-35deg, #0000002e, #ffffff73);
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.46), 0 2px 10px 0 rgba(0, 0, 0, 0.12);

    &.shadow-hover:hover {
        border: none;
        background-image: linear-gradient(0deg, #04040694, #ffffff3b);
    }
}

.text {
    &--align-center {
        text-align: center;
    }
}

.modal-open .modal {
    overflow: hidden;
}

.ng-invalid:not(form):not(.ng-untouched) {
    border: 2px solid red;
}

.navbar-expand-lg {
    display: flex;
    flex-direction: column;
}

.menu-container {
    width: 100%;
}

.slides-container {
    display: flex;
}

.slides-container .lock-box .feature-content p {
    color: #dedbdb;
}

.slides-container .lock-box .feature-content h5 {
    color: #dedbdb;
}

.button-outline {
    border-color: #fff;
    color: #fff;
}

/* Base CSS -theme css*/

* {
    margin: 0;
    padding: 0;
}

#preloader {
    overflow: hidden;
    background-color: rgba(52, 26, 121, 0.99);
    height: 100%;
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 99999;
}

.dorne-load {
    width: 60px;
    height: 60px;
    background-color: transparent;
    position: relative;
    border-width: 5px;
    border-style: solid;
    border-color: rgba(255, 255, 255, 0.2) rgba(255, 255, 255, 0.2) rgba(255, 255, 255, 0.95);
    z-index: 9;
    top: 50%;
    margin-left: -30px;
    margin-top: -30px;
    left: 50%;
    border-radius: 50%;
    overflow: hidden;
    -webkit-animation: 4000ms linear 0s normal none infinite running dorneload;
            animation: 4000ms linear 0s normal none infinite running dorneload;
}

@-webkit-keyframes dorneload {
    0% {
        -webkit-transform: rotate(0);
                transform: rotate(0);
    }
    100% {
        -webkit-transform: rotate(360deg);
                transform: rotate(360deg);
    }
}

@keyframes dorneload {
    0% {
        -webkit-transform: rotate(0);
                transform: rotate(0);
    }
    100% {
        -webkit-transform: rotate(360deg);
                transform: rotate(360deg);
    }
}

body {
    font-family: 'Gafata', sans-serif;
    color: #fff;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Gafata', sans-serif;
    font-weight: 600;
    color: #fff;
    line-height: 1.3;
}

p {
    color: #fff;
    font-size: 14px;
    line-height: 1.5;
    font-weight: 400;
}

.section-padding-150 {
    padding-top: 150px;
    padding-bottom: 150px;
}

.section-padding-150-0 {
    padding-top: 150px;
    padding-bottom: 0;
}

.section-padding-0-150 {
    padding-top: 0;
    padding-bottom: 150px;
}

.section-padding-100-50 {
    padding-top: 100px;
    padding-bottom: 50px;
}

.section-padding-100 {
    padding-top: 100px;
    padding-bottom: 100px;
}

.section-padding-100-0 {
    padding-top: 100px;
    padding-bottom: 0;
}

.section-padding-0-100 {
    padding-top: 0;
    padding-bottom: 100px;
}

img {
    max-width: 100%;
    height: auto;
}

.mt-15 {
    margin-top: 15px;
}

.mt-30 {
    margin-top: 30px;
}

.mt-40 {
    margin-top: 40px;
}

.mt-50 {
    margin-top: 50px;
}

.mt-100 {
    margin-top: 100px;
}

.mt-150 {
    margin-top: 150px;
}

.mr-15 {
    margin-right: 15px;
}

.mr-30 {
    margin-right: 30px;
}

.mr-50 {
    margin-right: 50px;
}

.mr-100 {
    margin-right: 100px;
}

.mb-15 {
    margin-bottom: 15px;
}

.mb-30 {
    margin-bottom: 30px;
}

.mb-50 {
    margin-bottom: 50px;
}

.mb-100 {
    margin-bottom: 100px;
}

.ml-15 {
    margin-left: 15px;
}

.ml-30 {
    margin-left: 30px;
}

.ml-50 {
    margin-left: 50px;
}

.ml-100 {
    margin-left: 100px;
}

ul,
ol {
    margin: 0;
    padding: 0;
}

a,
a:hover,
a:focus,
a:active {
    text-decoration: none;
    -webkit-transition-duration: 500ms;
    transition-duration: 500ms;
    outline: none;
    font-weight: 600;
}

li {
    list-style: none;
}

.height-500 {
    height: 500px!important;
}
/* ... */

